# lab05

./: .appveyor.yml  CMakeLists.txt  CPackConfig.cmake  README.md  REPORT.md  REPORT_LAB02.md  REPORT_LAB03.md  build.sh  build_lib.sh  solver-0.1.0.0-Linux.deb  solver.cpp
.github/workflows/: ci.yml
artifacts/: solver-0.1.0.0-Linux.deb
banking/: Account.h  CMakeLists.txt  Transaction.h
banking/include/banking/: Account.h  Transaction.h
banking/src/: Account.cpp  Transaction.cpp
banking/tests/: test_account.cpp  test_transaction.cpp
example/: calc.cpp
examples/: CMakeLists.txt  example1.cpp  example2.cpp
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt  formatter.cpp
hello_world_application/: CMakeLists.txt  hello_world.cpp
include/: print.hpp
lib/: sum.cpp
solver_application/: CMakeLists.txt  solver.cpp
solver_lib/: CMakeLists.txt  solver.cpp  solver.h
sources/: print.cpp
tests/: test1.cpp  test_account.cpp  test_transaction.cpp
